@@ -1,5 +1,11 @@
 *SVN*
 
+* Updated prototype.js to 1.5.0_rc1 with latest fixes. [Rick Olson]
+
+  - XPATH support
+  - Make Form.getElements() return elements in the correct order
+  - fix broken Form.serialize return
+
 * session_migration generator adds an index on updated_at.  #6207 [grg]
 
 * script/server creates the tmp/pids directory.  #6204 [jonathan]
