@@ -1,5 +1,11 @@
 *SVN*
 
+* Updated prototype.js to 1.5.0_rc1 with latest fixes. [Rick Olson]
+
+  - XPATH support
+  - Make Form.getElements() return elements in the correct order
+  - fix broken Form.serialize return
+
 * Declare file extensions exempt from layouts.  #6219 [brandon]
     Example: ActionController::Base.exempt_from_layout 'rpdf'
 
